--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
 
 
     <h1>Hello my name is dharmik !!</h1>
+    <h1 id="headingOne">ID selector</h1>
+    <h1 class="c">It is class selector</h1>
+
     <br>    <!--line break-->
     <hr>    <!--used to separate the sections-->
+    
     <img src="images1.jpg" alt="RCB">
 
     <hr>
 
-    <p>H<sub>2</sub>O</p>
-    <p>N<sup>2</sup></p>
+    <p id="headingOne">H<sub id="headingOne">2</sub>O</p>
+    <p class="c">N<sup class="c">2</sup></p>
 
     <hr>
     
