--- a/index.html
+++ b/index.html
@@ -58,5 +58,9 @@
     
      <!-- iframe is used to show website inside another website-->
     <iframe height="200" width="500" src="https://www.wikipedia.org/"></iframe>
+    <hr>
+    <div class="d">This is Div !!</div>
+    <br>
+    <button>Click me!</button>
 </body>
 </html>
