--- a/AmazonNavbar.html
+++ b/AmazonNavbar.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="an.css">
 </head>
 <body>
-    <div>
+    <header>
         <a id="logo">amazon.in</a>
         <a>Account</a>
         <a>My Cart</a>
@@ -15,6 +15,15 @@
 
         <input type="text" name="" id="" placeholder="Search Amazon.in">
         <button>Search</button>
+    </header>
+    <br>
+
+    <div id="content">
+         <div class="contentbox" style="background-color: rgba(255,0,0,0.5);"></div>
+         <div class="contentbox" style="background-color: rgba(0,255,0,0.5);"></div>
+         <div class="contentbox"style="background-color: rgba(0,0,255,0.5);"></div>
     </div>
+    
+    <footer>copyright by amazon</footer>
 </body>
 </html>
