--- a/AmazonNavbar.html
+++ b/AmazonNavbar.html
@@ -19,7 +19,7 @@
     <br>
 
     <div id="content">
-         <div class="contentbox" style="background-color: rgba(255,0,0,0.5);"></div>
+         <div class="contentbox" id="box1" style="background-color: rgba(255,0,0,0.5);"></div>
          <div class="contentbox" style="background-color: rgba(0,255,0,0.5);"></div>
          <div class="contentbox"style="background-color: rgba(0,0,255,0.5);"></div>
     </div>
